--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
+		function setSearchEngine() {
+			let engine = document.querySelector("input[name=engine]:checked").value;
+			let actions = {
+   				"google": "https://www.google.com/",
+				"duckDuckGo": "https://www.duckduckgo.com",
+				"bing": "https://www.bing.com",
+				"ask": "https://www.ask.com"
+			};
+			let action = actions[engine];
+			document.getElementById("searchForm").setAttribute("action", action);
+		}
     window.addEventListener("load", function(){
-        // TODO: register the handler
+		document.getElementById("searchForm").addEventListener("submit", function() {
+			setSearchEngine();
+		});
     });
 	</script>
 </head>
@@ -13,7 +25,18 @@
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
-	</form>
+	<input type="text" name="q"/>
+	<br/>
+	<label>Google<input type="radio" name="engine" value="google"/></label>
+	<br/>
+	<label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"/></label>
+	<br/>
+	<label>Bing<input type="radio" name="engine" value="bing"/></label>
+	<br/>
+	<label>Ask<input type="radio" name="engine" value="ask"/></label>
+	<br/>
+	<button>Go!</button>
+
+</form>
 
 </body>
